# rusty_code_to_prod

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
tests/: health_check.rs
