[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.7"
chrono = "0.4.38"
http = "1.1.0"
hyper = { version = "1.5.0", features = ["full"] }
log = "0.4.22"
reqwest = "0.12.8"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full", "macros", "rt-multi-thread", "signal", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
